cluster/apps/external/pufferpanel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pufferpanel
  namespace: external
  annotations:

spec:
  type: ExternalName
  externalName: 10.10.10.92
  ports:
    - port: 8080
