cluster/apps/external/pufferpanel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: https://avatars.githubusercontent.com/u/9778794
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
  name: pufferpanel
  namespace: external
spec:
  rules:
  - host: panel.icbplays.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pufferpanel
            port:
              number: 8080
  tls:
  - hosts:
    - panel.icbplays.net
    secretName: pufferpanel-external-cert
